Prevent image preview from going out of bounds

--- a/similart/static/css/style.css
+++ b/similart/static/css/style.css
@@ -169,11 +169,10 @@ line {
 #d3-container {
   width: 100%;
   height: 800px;
-  overflow: auto;
 }
 
 #preview-image {
-  z-index: 1;
+  z-index: 2;
 }
 
 #overlay {
